build(dependencies): 添加 sharp 库并更新相关依赖
- 在 package.json 中添加 sharp 作为依赖项
- 在 pnpm-lock.yaml 中添加 sharp 及其相关依赖的版本信息
- 更新 package.json 中的 scripts，添加 watch 脚本

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "type": "commonjs",
   "engines": {
-    "vscode": "^1.60.0" 
+    "vscode": "^1.60.0"
   },
   "categories": [
     "Other"
@@ -25,6 +25,7 @@
   },
   "scripts": {
     "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
     "build": "tsc -p ./"
   },
   "devDependencies": {
@@ -40,5 +41,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "sharp": "^0.34.2"
   }
 }
